Fix Table of Content spacing

--- a/themes/5ePhb.style.less
+++ b/themes/5ePhb.style.less
@@ -641,7 +641,6 @@ body {
 	.inline-block {
 		display : inline-block;
 		text-indent : initial;
-		line-height : 1.3em;
 	}
 	div {
 		column-gap : 0.5cm; //Default spacing if a div uses multicolumns
